Changed margin-top to 67px on main element to avoid covering the headline below

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h2 {
     text-transform: uppercase;
     color: #000000;
     letter-spacing: 3px;
+    margin-top: 20px;
     margin-left: 7px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -122,7 +123,7 @@ nav {
 main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    margin-top: 47px;
+    margin-top: 67px;
     /* Enable flex properties for child elements */
     display: flex;
     flex-direction: column;
